--- a/SoundCloud/SoundCloud/Info.plist
+++ b/SoundCloud/SoundCloud/Info.plist
@@ -26,7 +26,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Extra</string>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
